--- a/cv-app/index.html
+++ b/cv-app/index.html
@@ -86,8 +86,10 @@
       <tr>
         <td>2023 – Present</td>
         <td>Upspring & PTE Nemo</td>
-        <td>IELTS & PTE Instructor: Deliver group and one-on-one IELTS/PTE classes, design fully personalized learning paths.</td>
-        <td>Applying technology knowledge to build LLM platform such as Moodle, and designing courses online.</td>
+        <td>IELTS & PTE Instructor: Deliver group and one-on-one IELTS/PTE classes, design fully personalized learning paths.
+            <p>Applying technology knowledge to build LLM platform such as Moodle, and designing courses online.</p>
+        </td>
+        
       </tr>
       </tbody>
     </table>
