--- a/cv-app/index.html
+++ b/cv-app/index.html
@@ -33,8 +33,8 @@
       <thead>
         <tr>
           <th>Thời gian</th>
-          <th>Tổ chức</th>
-          <th>Chuyên ngành</th>
+          <th>Organization</th>
+          <th>Major</th>
         </tr>
       </thead>
       <tbody>
