--- a/cv-app/index.html
+++ b/cv-app/index.html
@@ -32,7 +32,7 @@
     <table>
       <thead>
         <tr>
-          <th>Thời gian</th>
+          <th>Period</th>
           <th>Organization</th>
           <th>Major</th>
         </tr>
