--- a/cv-app/index.html
+++ b/cv-app/index.html
@@ -8,6 +8,9 @@
   <script defer src="script.js"></script>
 </head>
 <body>
+  <!-- Theme toggle -->
+  <button id="theme-toggle">Switch to Light Mode</button>
+
   <h1>Curriculum Vitae</h1>
 
   <section class="section" id="personal-info">
@@ -19,13 +22,12 @@
     </ul>
   </section>
 
-<section class="section intro" id="introduction">
-  <h2>Introduction</h2>
-  <p>
-    I am an experienced English instructor with over 10 years of expertise in designing and delivering IELTS and PTE courses. Since 2023, I have been working with Upspring and PTE Nemo to teach both group and one-on-one classes, creating fully personalized learning paths. I specialize in curriculum development on Moodle, integrating interactive tools (H5P, Kahoot, Wordwall), and leveraging AI-powered audio processing (ElevenLabs TTS, speech-to-text) for enhanced speaking and writing assessment. Passionate about student-centered learning, I build engaging materials that boost confidence and ensure measurable progress.
-  </p>
-</section>
-
+  <section class="section" id="introduction">
+    <h2>Introduction</h2>
+    <p>
+      I am an experienced English instructor with over 10 years of expertise in designing and delivering IELTS and PTE courses. Since 2023, I have been working with Upspring and PTE Nemo to teach both group and one-on-one classes, creating fully personalized learning paths. I specialize in curriculum development on Moodle, integrating interactive tools (H5P, Kahoot, Wordwall), and leveraging AI-powered audio processing (ElevenLabs TTS, speech-to-text) for enhanced speaking and writing assessment. Passionate about student-centered learning, I build engaging materials that boost confidence and ensure measurable progress.
+    </p>
+  </section>
 
   <section class="section" id="education">
     <h2>Education</h2>
@@ -59,38 +61,38 @@
 
   <section class="section" id="experience">
     <h2>Professional Experience</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Period</th>
-        <th>Organization</th>
-        <th>Role & Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2012 – 2013</td>
-        <td>Ton Duc Thang University – English Center</td>
-        <td>English Teacher: Delivered basic ESL courses and TOEIC preparation classes.</td>
-      </tr>
-      <tr>
-        <td>2018 – 2022</td>
-        <td>HUTECH – Ho Chi Minh City University of Technology</td>
-        <td>Lecturer, English Department & Center: Taught Business English for General Classes.</td>
-      </tr>
-      <tr>
-        <td>2019 – 2022</td>
-        <td>UFM – University of Finance & Marketing</td>
-        <td>Lecturer, English Department: Conducted finance-and-banking English General Classes.</td>
-      </tr>
-      <tr>
-        <td>2023 – Present</td>
-        <td>Upspring & PTE Nemo</td>
-        <td>IELTS & PTE Instructor: Deliver group and one-on-one IELTS/PTE classes, design fully personalized learning paths.
-            <p>Applying technology knowledge to build LLM platform such as Moodle, and designing courses online.</p>
-        </td>
-        
-      </tr>
+    <table>
+      <thead>
+        <tr>
+          <th>Period</th>
+          <th>Organization</th>
+          <th>Role &amp; Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2012 – 2013</td>
+          <td>Ton Duc Thang University – English Center</td>
+          <td>English Teacher: Delivered basic ESL courses and TOEIC preparation classes.</td>
+        </tr>
+        <tr>
+          <td>2018 – 2022</td>
+          <td>HUTECH – Ho Chi Minh City University of Technology</td>
+          <td>Lecturer, English Department & Center: Taught Business English for General Classes.</td>
+        </tr>
+        <tr>
+          <td>2019 – 2022</td>
+          <td>UFM – University of Finance &amp; Marketing</td>
+          <td>Lecturer, English Department: Conducted finance-and-banking English General Classes.</td>
+        </tr>
+        <tr>
+          <td>2023 – Present</td>
+          <td>Upspring &amp; PTE Nemo</td>
+          <td>
+            IELTS &amp; PTE Instructor: Deliver group and one-on-one IELTS/PTE classes, design fully personalized learning paths.
+            <p>Applying technology knowledge to build LLM platforms such as Moodle, and designing online courses.</p>
+          </td>
+        </tr>
       </tbody>
     </table>
   </section>
@@ -112,7 +114,6 @@
         <tr id="desc-pte" class="desc">
           <td colspan="2">Speaking 64 / Writing 64 / Reading 63 / Listening 60</td>
         </tr>
-
         <tr>
           <td>E-learning Platforms</td>
           <td><button class="toggle-btn" data-target="desc-elearning">Show</button></td>
@@ -120,7 +121,6 @@
         <tr id="desc-elearning" class="desc">
           <td colspan="2">Moodle (Learnity.vn), H5P, Kahoot, Wordwall, ElevenLabs</td>
         </tr>
-
         <tr>
           <td>Development &amp; Automation</td>
           <td><button class="toggle-btn" data-target="desc-dev">Show</button></td>
@@ -128,7 +128,6 @@
         <tr id="desc-dev" class="desc">
           <td colspan="2">VS Code, Git/GitHub, Node.js scripts, NotebookLM</td>
         </tr>
-
         <tr>
           <td>AI &amp; Audio</td>
           <td><button class="toggle-btn" data-target="desc-audio">Show</button></td>
@@ -136,7 +135,6 @@
         <tr id="desc-audio" class="desc">
           <td colspan="2">ElevenLabs TTS, Google Speech-to-Text, TurboScribe + ChatGPT scoring</td>
         </tr>
-
         <tr>
           <td>Web &amp; Chatbot</td>
           <td><button class="toggle-btn" data-target="desc-chatbot">Show</button></td>
